--- a/frontend/src/components/atoms/inputText/inputText.module.scss
+++ b/frontend/src/components/atoms/inputText/inputText.module.scss
@@ -1,5 +1,17 @@
+@import "@/styles/global.module.scss";
 .inputText {
   position: relative;
+  input::placeholder {
+    line-height: 130%;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0;
+    color: $gray-500;
+  }
+  input {
+    @extend %body-sm-500;
+    color: $gray-1000;
+  }
   &__searchIcon {
     position: absolute;
     top: 12px;
