--- a/frontend/src/components/molecules/ratings/rating.module.scss
+++ b/frontend/src/components/molecules/ratings/rating.module.scss
@@ -10,11 +10,8 @@
     font-size: 20px;
   }
   &__reviewText {
-    color: $gray4;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%;
+    color: $gray-700;
+    @extend %body-sm-400;
     margin-left: 5px;
   }
 }
