--- a/frontend/src/components/organisms/header/header.module.scss
+++ b/frontend/src/components/organisms/header/header.module.scss
@@ -2,10 +2,10 @@
 .navbar {
   header {
     background-color: $white;
-    box-shadow: 0px 2px 4px -1px $greenGray1, 0px 4px 5px 0px $greenGray1,
-      0px 1px 10px 0px $greenGray1;
     height: 75px;
     justify-content: center;
+    box-shadow: 0px 2px 4px -1px $green-gray-100,
+      0px 4px 5px 0px $green-gray-100, 0px 1px 10px 0px $green-gray-100;
   }
   &__menu {
     width: 35px;
