fix some issuse for deploy to server

--- a/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
+++ b/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
@@ -2,7 +2,7 @@
 .slider {
   width: 100%;
   min-height: 450px;
-  &__mainImage img {
+  &__image {
     width: 100%;
     height: auto;
     border-radius: 8px;
