--- a/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
+++ b/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
@@ -2,10 +2,13 @@
 .slider {
   width: 100%;
   min-height: 450px;
-  &__image {
-    width: 100%;
+  &__zoom {
+    position: absolute;
+    top: 40px;
+    left: 600px;
+    width: 400px;
     height: auto;
-    border-radius: 8px;
+    opacity: 1;
   }
 
   // For Responsive
